# atomy-ai-design-checker

./: .env.example  .gitignore  AGENTS.md
.claude/: harness-policy.yaml  settings.json  settings.local.json
.claude/agents/: compliance-reviewer.md  security-reviewer.md
.claude/commands/: graph.md  handoff.md  implement.md  memory.md  new.md  review.md  rpi.md
.claude/compliance/: README.md
.claude/lib/: brainstorm-questions.yaml  chromadb_metadata_patcher.py  code_graph_builder.py  crystallizer.py  data_source_resolver.py  diagnose_builder.py  diagnose_narrator.py  embedding_provider.py  federation_client.py  frontmatter.py  graph_builder.py  graph_client.py  graph_renderer.py  harness_verifier.py  mempalace_client.py  palace_librarian.py  prompt_safety.py  rerank.py  router.py  timeline_builder.py  timeline_renderer.py
.claude/memory/: _archive_index.md  _index.md
.claude/memory/graph/: graph_meta.yaml
.claude/memory/learnings/: recurring-mistakes.md
.claude/skills/atomy-ai-design-checker/: SKILL.md
.claude/skills/graph/: SKILL.md
backend/: Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/src/: main.py
backend/src/api/: score.py
backend/src/config/: constants.py  validate_env.py
backend/src/data/: design_guide.json
backend/src/services/: scorer.py
backend/tests/: test_smoke.py
docs/: checklist.md  context.md  plan.md
docs/specs/: _TEMPLATE.md  채점기준-카테고리별.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: LanguageSelector.tsx
(+18 files in other folders)
